--- a/biography.html
+++ b/biography.html
@@ -4,14 +4,100 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToGodBeTheGloryToday | Biography</title>
-  <!-- Link to external CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body {
+      font-family: 'Times New Roman', serif;
+      margin: 0;
+      padding: 0;
+      background-color: #ffffff;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: #fff;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      margin: 1rem 0;
+      gap: 2rem;
+    }
+
+    nav ul li a {
+      color: #2c3e50;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    .section {
+      margin-bottom: 2rem;
+    }
+
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    .section p {
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
+      text-align: justify;
+    }
+
+    footer {
+      background-color: #2c3e50;
+      color: #fff;
+      text-align: center;
+      padding: 1.5rem;
+      margin-top: 3rem;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+        gap: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
 
   <header>
-    <h1>Toni Wood</h1>
-    <p>Discover the journey and inspiration behind the artist.</p>
+    <h1>Toni Wood Biography</h1>
+    <p>Discover the story and inspiration behind the artist’s work.</p>
   </header>
 
   <nav>
@@ -24,25 +110,14 @@
     </ul>
   </nav>
 
-  <main class="section-grid">
+  <main>
     <div class="section">
       <h2>About Toni Wood</h2>
-      <p>Toni Wood is a passionate self-taught artist who discovered her love for painting later in life. Her journey reflects creativity, resilience, and a desire to inspire others through visual storytelling.</p>
-    </div>
+      <p>Toni Wood discovered her passion for art later in life, transforming her creativity into a flourishing career as a contemporary artist. Her work blends vibrant colors, emotional depth, and cultural storytelling to create pieces that resonate with viewers on multiple levels.</p>
 
-    <div class="section">
-      <h2>Inspiration</h2>
-      <p>Toni draws inspiration from everyday life, nature, and her personal experiences. Each piece reflects a story, emotion, or moment that resonates with the viewer, connecting them to the artwork on a personal level.</p>
-    </div>
+      <p>Inspired by her personal experiences, faith, and the world around her, Toni’s art often explores themes of community, heritage, and everyday beauty. Each painting captures a unique perspective, reflecting both her technical skill and intuitive approach to composition.</p>
 
-    <div class="section">
-      <h2>Artistic Journey</h2>
-      <p>Starting later than many artists, Toni’s journey is a testament to the power of following one’s passion. Through perseverance and experimentation, she has developed a unique style that combines color, texture, and emotion in every piece.</p>
-    </div>
-
-    <div class="section">
-      <h2>Recognition</h2>
-      <p>Her work has been featured in exhibitions and galleries, captivating audiences with vibrant compositions and evocative storytelling. Toni continues to grow as an artist, exploring new mediums and techniques.</p>
+      <p>Through her website and exhibitions, Toni Wood aims to share her vision with collectors, enthusiasts, and anyone seeking to bring meaningful art into their space. Her work is a celebration of life, joy, and the human experience, brought to life through brushstrokes and imagination.</p>
     </div>
   </main>
 
