--- a/social.html
+++ b/social.html
@@ -3,31 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Social Media | ToGodBeTheGloryToday</title>
+  <title>ToGodBeTheGloryToday | Contact</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f8f8f8;
+      font-family: 'Times New Roman', serif;
       margin: 0;
       padding: 0;
+      background-color: #ffffff;
       color: #333;
+      line-height: 1.6;
     }
 
     header {
       background-color: #2c3e50;
-      color: white;
+      color: #fff;
       padding: 2rem;
       text-align: center;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
 
     header p {
       margin-top: 0.5rem;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
     }
 
     nav ul {
@@ -35,49 +36,51 @@
       display: flex;
       justify-content: center;
       padding: 0;
-      margin: 1rem 0 0 0;
+      margin: 1rem 0;
       gap: 2rem;
     }
 
     nav ul li a {
-      color: white;
+      color: #2c3e50;
       text-decoration: none;
       font-weight: bold;
+      font-size: 1.1rem;
     }
 
     nav ul li a:hover {
       text-decoration: underline;
     }
 
-    .content {
+    main {
       max-width: 900px;
-      margin: 3rem auto;
+      margin: 2rem auto;
       padding: 0 1rem;
+    }
+
+    .section {
+      margin-bottom: 2rem;
       text-align: center;
     }
 
-    .content h2 {
-      margin-bottom: 1.5rem;
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
 
-    .social-links {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 2rem;
-      align-items: center;
+    .section p {
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
     }
 
     .social-links a {
       display: inline-block;
-      padding: 12px 24px;
+      margin: 0.5rem;
+      padding: 10px 18px;
       background-color: #2c3e50;
       color: white;
       text-decoration: none;
-      border-radius: 6px;
+      border-radius: 5px;
       font-weight: bold;
-      width: 200px;
-      text-align: center;
     }
 
     .social-links a:hover {
@@ -86,18 +89,29 @@
 
     footer {
       background-color: #2c3e50;
-      color: white;
+      color: #fff;
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+        gap: 1rem;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Connect on Social Media</h1>
-    <p>Follow Toni to see new artwork, updates, and behind-the-scenes content.</p>
+    <h1>Contact & Social</h1>
+    <p>Get in touch with Toni Wood or follow her latest artwork online.</p>
   </header>
 
   <nav>
@@ -107,25 +121,28 @@
       <li><a href="reproductions.html">Prints</a></li>
       <li><a href="biography.html">Biography</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="social.html">Social Media</a></li>
     </ul>
   </nav>
 
-  <div class="content">
-    <h2>Stay Connected</h2>
-    <p>Links to Toni's social media accounts will be available here soon. Follow to keep up with the latest artwork and updates!</p>
-
-    <div class="social-links">
-      <!-- Replace "#" with the actual links later -->
-      <a href="#" target="_blank">Instagram</a>
-      <a href="#" target="_blank">Facebook</a>
-      <a href="#" target="_blank">Twitter</a>
-      <a href="#" target="_blank">LinkedIn</a>
+  <main>
+    <div class="section">
+      <h2>Email</h2>
+      <p>Reach Toni for commissions, questions, or collaborations at:</p>
+      <p><a href="mailto:toniwood@example.com">toniwood@example.com</a></p>
     </div>
-  </div>
+
+    <div class="section">
+      <h2>Follow on Social Media</h2>
+      <div class="social-links">
+        <a href="https://www.instagram.com/ToniWoodArt" target="_blank">Instagram</a>
+        <a href="https://www.facebook.com/ToniWoodArt" target="_blank">Facebook</a>
+        <a href="https://www.twitter.com/ToniWoodArt" target="_blank">Twitter</a>
+      </div>
+    </div>
+  </main>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday. All Rights Reserved.</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
   </footer>
 
 </body>
