--- a/index.html
+++ b/index.html
@@ -4,7 +4,107 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToGodBeTheGloryToday | Home</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body {
+      font-family: 'Times New Roman', serif; /* clean, classic font */
+      margin: 0;
+      padding: 0;
+      background-color: #ffffff; /* white background */
+      color: #000000; /* black text */
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #ffffff; /* remove blue */
+      color: #000000;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      margin: 1rem 0;
+      gap: 2rem;
+    }
+
+    nav ul li a {
+      color: #000000; /* black links */
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    .section-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      max-width: 1000px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+    }
+
+    .section {
+      background-color: #ffffff; /* white section */
+      padding: 2rem;
+      border-radius: 8px;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      transition: transform 0.2s;
+    }
+
+    .section:hover {
+      transform: translateY(-5px);
+    }
+
+    .section h2 {
+      margin-top: 0;
+      font-size: 1.8rem;
+    }
+
+    .section p {
+      font-size: 1rem;
+    }
+
+    .section a {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 10px 18px;
+      background-color: #000000; /* black button */
+      color: #ffffff; /* white text on button */
+      text-decoration: none;
+      border-radius: 5px;
+    }
+
+    .section a:hover {
+      background-color: #333333;
+    }
+
+    footer {
+      background-color: #ffffff; /* white footer */
+      color: #000000; 
+      text-align: center;
+      padding: 1.5rem;
+      margin-top: 3rem;
+      border-top: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
 
@@ -16,7 +116,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      
+      <li><a href="originals.html">Original Art</a></li>
       <li><a href="reproductions.html">Prints</a></li>
       <li><a href="biography.html">Biography</a></li>
       <li><a href="contact.html">Contact</a></li>
