--- a/biography.html
+++ b/biography.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ToGodBeTheGloryToday | Biography</title>
+  <title>ToGodBeTheGloryToday | Artist Biography</title>
   <style>
     body {
       font-family: 'Times New Roman', serif;
@@ -24,11 +24,6 @@
     header h1 {
       margin: 0;
       font-size: 2.5rem;
-    }
-
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
     }
 
     nav ul {
@@ -55,22 +50,43 @@
       max-width: 900px;
       margin: 2rem auto;
       padding: 0 1rem;
+      text-align: center;
+    }
+
+    .artist-image {
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    .artist-image img {
+      max-width: 400px;
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .artist-name {
+      font-size: 1.5rem;
+      margin-top: 1rem;
+      font-weight: bold;
+      color: #2c3e50;
     }
 
     .section {
-      margin-bottom: 2rem;
+      margin-top: 2.5rem;
+      text-align: justify;
     }
 
     .section h2 {
+      text-align: center;
       font-size: 2rem;
       margin-bottom: 1rem;
-      text-align: center;
     }
 
     .section p {
       font-size: 1.1rem;
       margin-bottom: 1rem;
-      text-align: justify;
     }
 
     footer {
@@ -85,10 +101,12 @@
       header h1 {
         font-size: 2rem;
       }
-
       nav ul {
         flex-direction: column;
         gap: 1rem;
+      }
+      .artist-image img {
+        max-width: 90%;
       }
     }
   </style>
@@ -96,33 +114,42 @@
 <body>
 
   <header>
-    <h1>Toni Wood Biography</h1>
-    <p>Discover the story and inspiration behind the artist’s work.</p>
+    <h1>Artist Biography</h1>
   </header>
 
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="originals.html">Original Art</a></li>
-      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="reproductions.html">Reproductions</a></li>
       <li><a href="biography.html">Biography</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <main>
+    <div class="artist-image">
+      <img src="https://raw.githubusercontent.com/kjlartsanctuary/togodbetheglorytoday/main/assets/images/toni-wood/Toni%203.jpg" alt="Artist Toni Q. Wood">
+      <div class="artist-name">Artist Toni Q. Wood</div>
+    </div>
+
     <div class="section">
-      <h2>About Toni Wood</h2>
-      <p>Toni Wood discovered her passion for art later in life, transforming her creativity into a flourishing career as a contemporary artist. Her work blends vibrant colors, emotional depth, and cultural storytelling to create pieces that resonate with viewers on multiple levels.</p>
+      <h2>About the Artist</h2>
+      <p>
+        Toni Q. Wood is a passionate visual artist who discovered her gift later in life, proving that creativity knows no age. Her work captures moments of grace, joy, and reflection — often inspired by faith, family, and the beauty of everyday life.
+      </p>
 
-      <p>Inspired by her personal experiences, faith, and the world around her, Toni’s art often explores themes of community, heritage, and everyday beauty. Each painting captures a unique perspective, reflecting both her technical skill and intuitive approach to composition.</p>
+      <p>
+        Drawing from deep emotional experiences, Toni uses color and form to communicate strength and serenity. Each painting invites the viewer into a personal narrative, evoking a sense of connection and timeless beauty.
+      </p>
 
-      <p>Through her website and exhibitions, Toni Wood aims to share her vision with collectors, enthusiasts, and anyone seeking to bring meaningful art into their space. Her work is a celebration of life, joy, and the human experience, brought to life through brushstrokes and imagination.</p>
+      <p>
+        Through her journey, Toni has become a voice for rediscovering purpose and passion, encouraging others to follow their artistic dreams. Her evolving body of work continues to inspire collectors and art lovers alike.
+      </p>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Q. Wood & KJL Art Sanctuary</p>
   </footer>
 
 </body>
