--- a/biography.html
+++ b/biography.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ToGodBeTheGloryToday | Artist Biography</title>
   <style>
+    /* Global Reset and Base Styles */
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Times New Roman', serif;
       margin: 0;
@@ -17,35 +22,38 @@
     header {
       background-color: #2c3e50;
       color: #fff;
-      padding: 2rem;
+      padding: 1.5rem 1rem;
       text-align: center;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
 
+    /* Navigation Bar */
     nav ul {
       list-style: none;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       padding: 0;
       margin: 1rem 0;
-      gap: 2rem;
+      gap: 1.5rem;
     }
 
     nav ul li a {
       color: #2c3e50;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1rem;
     }
 
     nav ul li a:hover {
       text-decoration: underline;
     }
 
+    /* Main Content */
     main {
       max-width: 900px;
       margin: 2rem auto;
@@ -54,39 +62,42 @@
     }
 
     .artist-image {
+      margin: 1rem auto 2rem;
       text-align: center;
-      margin-top: 2rem;
     }
 
     .artist-image img {
-      max-width: 400px;
       width: 100%;
+      max-width: 400px;
       height: auto;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
 
     .artist-name {
-      font-size: 1.5rem;
-      margin-top: 1rem;
+      font-size: 1.4rem;
+      margin-top: 0.75rem;
       font-weight: bold;
       color: #2c3e50;
     }
 
     .section {
       margin-top: 2.5rem;
-      text-align: justify;
+      text-align: left;
+      padding: 0 0.5rem;
     }
 
     .section h2 {
       text-align: center;
-      font-size: 2rem;
+      font-size: 1.6rem;
       margin-bottom: 1rem;
+      color: #2c3e50;
     }
 
     .section p {
-      font-size: 1.1rem;
+      font-size: 1rem;
       margin-bottom: 1rem;
+      text-align: justify;
     }
 
     footer {
@@ -95,24 +106,50 @@
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
+      font-size: 0.9rem;
     }
 
-    @media (max-width: 600px) {
+    /* --- Responsive Adjustments --- */
+    @media (max-width: 768px) {
       header h1 {
-        font-size: 2rem;
+        font-size: 1.6rem;
       }
+
       nav ul {
         flex-direction: column;
-        gap: 1rem;
+        gap: 0.8rem;
       }
-      .artist-image img {
-        max-width: 90%;
+
+      .section p {
+        font-size: 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        padding: 1rem;
+      }
+
+      header h1 {
+        font-size: 1.4rem;
+      }
+
+      .artist-name {
+        font-size: 1.2rem;
+      }
+
+      .section h2 {
+        font-size: 1.3rem;
+      }
+
+      .section p {
+        font-size: 0.95rem;
       }
     }
   </style>
 </head>
-<body>
 
+<body>
   <header>
     <h1>Artist Biography</h1>
   </header>
@@ -128,7 +165,7 @@
 
   <main>
     <div class="artist-image">
-      <img src="https://raw.githubusercontent.com/kjlartsanctuary/togodbetheglorytoday/main/assets/images/toni-wood/Toni%203.jpg" alt="Artist Toni Q. Wood">
+      <img src="https://raw.githubusercontent.com/kjlartsanctuary/togodbetheglorytoday/main/assets/images/toni-wood/Toni%203.jpg" alt="Artist Toni Q. Wood" />
       <div class="artist-name">Artist Toni Q. Wood</div>
     </div>
 
@@ -137,11 +174,9 @@
       <p>
         Toni Q. Wood is a passionate visual artist who discovered her gift later in life, proving that creativity knows no age. Her work captures moments of grace, joy, and reflection — often inspired by faith, family, and the beauty of everyday life.
       </p>
-
       <p>
         Drawing from deep emotional experiences, Toni uses color and form to communicate strength and serenity. Each painting invites the viewer into a personal narrative, evoking a sense of connection and timeless beauty.
       </p>
-
       <p>
         Through her journey, Toni has become a voice for rediscovering purpose and passion, encouraging others to follow their artistic dreams. Her evolving body of work continues to inspire collectors and art lovers alike.
       </p>
@@ -151,6 +186,5 @@
   <footer>
     <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Q. Wood & KJL Art Sanctuary</p>
   </footer>
-
 </body>
 </html>
